FindBugs cleanup
Fixed some FindBugs findings

Signed-off-by: Dominik Schadow <dominikschadow@googlemail.com>